# reed-solomon-erasure-cms256

./: .gitmodules  Cargo.toml  README.md  build.rs
benches/: bandwidth.rs  min_shards.rs
src/: cm256.rs  cm256_ffi.rs  core.rs  galois_8.rs  isa_l.rs  lib.rs
src/tests/: mod.rs
